--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -39,11 +39,13 @@
 }
 
 .header-logo {
+    @include rem(height, 40px);
     @include rem(max-width, 40px);
     width: 100%;
 
     @include breakpoint('small') {
         @include rem(max-width, 80px);
+        height: auto;
     }
 
     @include breakpoint('large') {
